--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <h1>Hello World!</h1>
-    <p>Looks like you got the webserver up and running! Good job! Now it is time to
-        start working.
-    </p>
+    <span id="question"></span>
+    <input type="text" id="input">
+    <button> submit</button>
 
     <script nomodule src="build.js"></script>
 </body>
