--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>Hello World!</h1>
-    <span id="question"></span>
+    <p><span id="question"></span></p>
     <input type="text" id="input">
     <button> submit</button>
 
