--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
     <h1>Hello World!</h1>
     <p><span id="question"></span></p>
     <input type="text" id="input">
+    <div class="radio">
+
+    </div>
     <button> submit</button>
 
     <script nomodule src="build.js"></script>
