--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
-<html lang="">
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="js/app.js"></script>
 </head>
@@ -15,7 +13,7 @@
     <h1>Hello World!</h1>
     <p><span id="question"></span></p>
     <input type="text" id="input">
-    <form class="radio">
+    <form id="radio">
 
     </form>
     <button> submit</button>
