--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <h1>Hello World!</h1>
     <p><span id="question"></span></p>
-    <input type="text" id="input">
-    <form id="radio">
+ <!-- <input type="text" id="input"> -->
+    <form id="form">
 
     </form>
     <button> submit</button>
