--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <h1>Hello World!</h1>
     <p><span id="question"></span></p>
  <!-- <input type="text" id="input"> -->
+ <p><Span id="timer"></Span></p>
     <form id="form">
 
     </form>
