fixed timer added name input

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title></title>
@@ -10,10 +11,9 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <h1>Welcome To Quiz Game</h1>
     <p><span id="question"></span></p>
- <!-- <input type="text" id="input"> -->
- <p><Span id="timer"></Span></p>
+    <p><Span id="timer"></Span></p>
     <form id="form">
 
     </form>
