working but need more features

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <form id="form">
 
     </form>
-    <button class="button"> submit</button>
+    <!-- <button class="button"> submit</button> -->
 
     <script nomodule src="build.js"></script>
 </body>
