--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script type="module" src="js/app.js"></script>
 </head>
 
-<body>
+<body class="body">
     <h1>Welcome To Quiz Game</h1>
 
     <form id="form">
